# esp32-salt-level-sensor-vl53l0x

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
main/: Kconfig.projbuild  main.c  vl53l0x_helper.c  vl53l0x_helper.h
